Fixing bet buttons on IE7

--- a/css/index.styl
+++ b/css/index.styl
@@ -42,9 +42,6 @@ h1
 .btn-group
   display:inline-block
   
-.bet button:after
-  content: '$' attr(data-amount)
-  
 .alert-inverse
   background: #333
   color: white
